src/test/deca/context/invalid/declMethod-sameNameFieldMethod.context
declMethod-sameNameFieldMethod.deca:6: